# test-rp

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build-service-and-image.yml
src/test_rp/: __main__.py  hello.py
