[project]
name = "test_rp"
dynamic = ["version"]
description = "Testing Release Please"
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []
lock-with-sources = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/test_rp"]

[tool.rye.scripts]
ping = 'echo pong'

[project.scripts]
hello = 'test_rp.__main__:main'

[[tool.rye.sources]]
name = "default"
url = "https://pypi.org/simple"

[tool.uv]
# index strategy needed due to issue with the pace pypi artifactory repo
index-strategy = "unsafe-best-match"

[tool.hatch.version]
path = "src/test_rp/_version.py"

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.mypy]
# strict = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
no_implicit_optional = true
plugins = "pydantic.mypy"

[tool.ruff]
src = ["src"]
line-length = 90

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "T20", "Q", "N", "E501"]

[tool.coverage.run]
source = ["hello"]
omit = ["src/hello/__main__.py"]
